--- a/website/blog/templates/article.html
+++ b/website/blog/templates/article.html
@@ -1,6 +1,7 @@
 {% extends "base_blog.html" %}
 
 
+{% block title %}    <title>{{article.title}} </title> {% endblock %}
 
 {% block menu_categories %}
     {% for c in categories %}
