--- a/website/blog/templates/base_blog.html
+++ b/website/blog/templates/base_blog.html
@@ -8,84 +8,19 @@
 -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400"/>
 <link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css"/>
-
-
+<link rel="stylesheet" href={% static 'css/custom_blog.css' %}/>
 <link href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" rel="stylesheet">
-
 
 <!--
 <script src="{% static 'script.js' %}"></script>
 -->
 
-<style>
-
-.cats {
-  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.1);
-  background-color: black;
-  padding: 0.3em;
-  border-radius: 5px;  
-}
- 
-.container-fluid {
-    margin-right: auto;
-    margin-left: auto;
-}
- 
-.cats a {
-  font-size: 15px;
-  text-decoration: none;
-}
-
-.cats span{
-  display: inline-block;
-}
-
-
-.cats .cat {
-  border: 1px solid #dee2e5;
-  background-color: #dee2e5;
-  border-radius: 5px;
-  padding: 1px 2px;
-  color: #8199A3;
-  transition: all 300ms ease-in-out;
-  margin-bottom: 20px;
-}
-
-.cats .cat:hover{
-  color: #fff;
-  background-color: #5659C9;
-}
-
-main, footer {
-
-    margin-left: auto;
-    margin-right: auto;
-}
-header{
-margin-left: auto;
-margin-right: auto;
-
-}
-
-.row {
-
-margin-left: auto;
-margin-right: auto;
-
-}
-body {
-			font-family: "Lato", sans-serif;
-			-webkit-font-smoothing: antialiased;
-
-}
-</style>
-
-    <meta charset="UTF-8">
-    <title>home</title>
+<meta charset="UTF-8">
+{% block title %}    <title>home</title> {% endblock %}
 </head>
+
 <div class="container-fluid">
 <header>
-
 
 <nav class = "navbar navbar-expand-md navbar-dark bg-dark">
 <div class="collapse navbar-collapse">
