minor change to ui. updated screenshots.

--- a/website/blog/templates/panel.html
+++ b/website/blog/templates/panel.html
@@ -240,9 +240,7 @@ $('.del_cat').on('click', function(){
 
 {{form.new_categories}}
 
-{{ form.is_published }}
-
-
+<label style="padding: 1em;"> <b>publish</b> {{ form.is_published }} </label>
 <button type="submit" class="btn btn-lg btn-primary btn-block submit"> submit </button>
 </form>
 </div>
