--- a/website/blog/templates/panel.html
+++ b/website/blog/templates/panel.html
@@ -84,9 +84,15 @@ $('.del_cat').on('click', function(){
 <link rel="stylesheet" href="{% static 'sidebar-09/css/style.css' %}">
 
 <link rel="stylesheet" href="{% static 'css/custom_panel.css' %}">
-<link rel="stylesheet" href="{% static 'dist/css/propeller.min.css' %}">
-<link rel="stylesheet" href="{% static 'datetimepicker/css/bootstrap-datetimepicker.css' %}">
-<link rel="stylesheet" href="{% static 'datetimepicker/css/pmd-datetimepicker.css' %}">
+
+   {# Include FontAwesome; required for icon display #}
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
+
+    {# Include Bootstrap 4 and jQuery #}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+
 </head>
 
 {% block content %}
@@ -226,11 +232,7 @@ $('.del_cat').on('click', function(){
 {{form.slug}}
 {{form.img}}
 <!--Default date and time picker -->
-<div class="form-group pmd-textfield pmd-textfield-floating-label">
-    <label class="control-label" for="datetimepicker-default">Select Date and Time</label>
 {{ form.date }}
-
-</div>
 
 
 {{form.content}}
@@ -257,22 +259,7 @@ $('.del_cat').on('click', function(){
 <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
 <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 
-<!-- Popper JS -->
- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-<!-- Bootstrap js -->
-<script type="text/javascript" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
-<script type="text/javascript" src={% static "dist/js/propeller.min.js" %}></script>
-
-<script type="text/javascript" src="{% static "datetimepicker/js/moment-with-locales.js" %}"></script>
-<script type="text/javascript" language="javascript" src={% static "datetimepicker/js/bootstrap-datetimepicker.js" %}></script>
-
-<script>
-    // Default date and time picker
-    $('#datetimepicker-default').datetimepicker();
-</script>
- 
 {% endif %}
 
 
