--- a/website/blog/templates/base_blog.html
+++ b/website/blog/templates/base_blog.html
@@ -8,7 +8,7 @@
 -->
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400"/>
 <link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css"/>
-<link rel="stylesheet" href={% static 'css/custom_blog.css' %}/>
+<link rel="stylesheet" href={% static "css/custom_blog.css" %}>
 <link href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" rel="stylesheet">
 
 <!--
