--- a/website/blog/templates/panel.html
+++ b/website/blog/templates/panel.html
@@ -73,7 +73,9 @@ $('.del_cat').on('click', function(){
 
 <script src="http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js"></script> 
 <title>Rango CMS panel</title>
-<link rel="stylesheet" href= "https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" href="http://bootstrap-tagsinput.github.io/bootstrap-tagsinput/dist/bootstrap-tagsinput.css">
@@ -81,7 +83,8 @@ $('.del_cat').on('click', function(){
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css"/>    
-<link rel="stylesheet" href="{% static 'sidebar-09/css/style.css' %}">
+ <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 
 <link rel="stylesheet" href="{% static 'css/custom_panel.css' %}">
 
