--- a/website/static_extra/css/custom_panel.css
+++ b/website/static_extra/css/custom_panel.css
@@ -1,162 +1,1 @@
-.input-group {
-    align-items: baseline;
-}
-body {
-    margin: 0;
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-    font-size: 1rem;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #212529;
-    text-align: left;
-    background-color: #fff;
-}
-.form-control {
-    display: block;
-    width: 100%;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    line-height: 1.5;
-    color: #495057;
-    background-color: #fff;
-    background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: .25rem;
-    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-}
-
-.normal, .bootstrap-tagsinput{
-    margin: 8px 0;
-}
-
-#postform {
-width: 0
-
-}
-
-#postform .submit {
-with:  1em;
-margin-left: auto;
-margin-right: auto;
-}
-
-.label-info {
-    background-color: #5bc0de;
-}
-
-.label {
-    display: inline;
-    padding: .2em .6em .3em;
-    font-size: 75%;
-    font-weight: 700;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: .25em;
-}
-
-.bootstrap-tagsinput, .tag {
-    margin-right: 2px;
-    color: white;
-}
-.label-info {
-    background-color: #5bc0de;
-}
-
-#postform {
-display: inline-grid;
-}
-select {
-  text-align-last: center;
-  width: fit-content;
-}
-
-.bootstrap-tagsinput{
-width: 30%;
-min-width: 100px;
-padding: 5px 8px;
-
-}
-
-select {
-  width: fit-content;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-
-}
-input[type=text].special {
-width: 30%;
- padding: 4px 8px;
- margin: 8px 0; 
-display: inline-block;
- border: 1px solid #ccc; border-radius: 4px;
- box-sizing: border-box; 
-}
-
-#bootstrap-tagsinput{
-padding: 12px 20px;
-border: 1px solid #ccc;
-border-radius: 4px;
-box-sizing: border-box;
-margin: 8px 0;
-
-}
-
-input[type=text].normal, #id_categories {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-}
-
-h1, h2, h3{
-margin-left: auto;
-margin-right: auto;
-}
-
-input[type=submit].normal{
-  width: 100%;
-  background-color: #04AA6D;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-
-
-input{box-sizing:border-box} 
-div{box-sizing:border-box} 
-
-.submit_button {
-background-color: darkgreen;
-min-height: 45px;
-}
-
-form{
-margin-left:auto;
-margin-right:auto;
-color: black;
-}
-/* Add a background color to the submit button on mouse-over */
-input[type=submit]:hover {
-  background-color: #45a049;
-} 
-
-header, main, footer {
-    max-width: 800px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
+.input-group{align-items:baseline}body{margin:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:1rem;font-weight:400;line-height:1.5;color:#212529;text-align:left;background-color:#fff}.form-control{display:block;width:100%;padding:.375rem .75rem;font-size:1rem;line-height:1.5;color:#495057;background-color:#fff;background-clip:padding-box;border:1px solid #ced4da;border-radius:.25rem;transition:border-color .15s ease-in-out,box-shadow .15s ease-in-out}.bootstrap-tagsinput,.normal{margin:8px 0}#postform{width:0}#postform .submit{with:1em;margin-left:auto;margin-right:auto}.label-info{background-color:#5bc0de}.label{display:inline;padding:.2em .6em .3em;font-size:75%;font-weight:700;line-height:1;color:#fff;text-align:center;white-space:nowrap;vertical-align:baseline;border-radius:.25em}.bootstrap-tagsinput,.tag{margin-right:2px;color:#fff}.label-info{background-color:#5bc0de}#postform{display:inline-grid}select{text-align-last:center;width:fit-content}.bootstrap-tagsinput{width:30%;min-width:100px;padding:5px 8px}select{width:fit-content;padding:12px 20px;margin:8px 0;display:inline-block;border:1px solid #ccc;border-radius:4px;box-sizing:border-box}input[type=text].special{width:30%;padding:4px 8px;margin:8px 0;display:inline-block;border:1px solid #ccc;border-radius:4px;box-sizing:border-box}#bootstrap-tagsinput{padding:12px 20px;border:1px solid #ccc;border-radius:4px;box-sizing:border-box;margin:8px 0}#id_categories,input[type=text].normal{width:100%;padding:12px 20px;margin:8px 0;display:inline-block;border:1px solid #ccc;border-radius:4px;box-sizing:border-box}h1,h2,h3{margin-left:auto;margin-right:auto}input[type=submit].normal{width:100%;background-color:#04aa6d;color:#fff;padding:14px 20px;margin:8px 0;border:none;border-radius:4px;cursor:pointer}input{box-sizing:border-box}div{box-sizing:border-box}.submit_button{background-color:#006400;min-height:45px}form{margin-left:auto;margin-right:auto;color:#000}input[type=submit]:hover{background-color:#45a049}footer,header,main{max-width:800px;margin-left:auto;margin-right:auto}
