--- a/website/blog/templates/post_success.html
+++ b/website/blog/templates/post_success.html
@@ -1,6 +1,25 @@
 <html>
 <header>
-<h1> Successfully submitted </h1>
+    <style>
+        * {box-sizing: border-box}
+ 
+ 
+ button {
+   background-color: #102b21;
+   color: white;
+   padding: 14px 20px;
+   margin: 8px 0;
+   border: none;
+   cursor: pointer;
+   width: 100%;
+   opacity: 0.9;
+ }
+ 
+ 
+ </style>
+
+<h1 style="color:green; text-align: center;"> Successfully submitted </h1>
+<a href="/panel"><button> main page</button></a>
 </header>
 <body>
 </body>
