--- a/website/blog/templates/base_blog.html
+++ b/website/blog/templates/base_blog.html
@@ -96,7 +96,7 @@
          <!-- Copyright -->
           <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
 
-        <span>copyright Phalanthus 2021</span>
+        <span>copyright OracleOfDelphii 2022</span>
          <!-- Copyright -->
 
         <a class="text-reset fw-bold" href="#">Rango CMS</a>
